# semimech

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
notebooks/: plots.ipynb  residual_stream_analysis.ipynb
src/semimech/: activations.py  analysis.py  models.py  utils.py  visualizations.py  widgets.py
