[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semimech"
version = "0.1.0"
description = "Semi-mechanistic analysis tools for the residual stream."
readme = "README.md"
authors = [
    { name = "Daniel Yang", email = "daniel.yang@inf.ethz.ch" },
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "natsort>=8.4.0",
    "numpy>=2.0",
    "plotly>=6.6.0",
    "scikit-learn>=1.7.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.0",
]
