[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semimech"
version = "0.1.0"
description = "Semi-mechanistic analysis tools for the residual stream."
readme = "README.md"
authors = [
    { name = "XXXXX", email = "xxxxx@email.com" },
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0",
    "ipykernel>=7.2",
    "ipywidgets>=8.0",
    "jupyter>=1.1",
    "matplotlib>=3.10",
    "natsort>=8.4",
    "numpy>=2.0",
    "plotly>=6.6",
    "scikit-learn>=1.6",
    "torch>=2.9",
    "tqdm>=4.67",
    "transformers>=5.0",
]

[tool.hatch.build.targets.wheel]
package-dir = "src"
